syntax = "proto3";

package user;

option go_package = "github.com/mfyai/mfydemo/internal/app/user/api;api";

// UserService defines CRUD operations for user management.
service UserService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message AddUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  int32 status = 4;
}

message AddUserResponse {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string password = 2;
  string email = 3;
  int32 status = 4;
}

message UpdateUserResponse {
  bool success = 1;
}

message RemoveUserRequest {
  int64 id = 1;
}

message RemoveUserResponse {
  bool success = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  int32 status = 4;
  string created_at = 5;
  string updated_at = 6;
}
